package tms.common.protocol.message;
message LoginResponse {
  enum Status {
    kOk = 0;
    kAccessViolation = 1;
  }
  optional Status status = 1 [default = kOk];
}
